[tool.poetry]
name = "notmy2cents"
version = "0.1.0"
description = "A multi agentic data project"
authors = ["Lim Zheng Xuan <limzhengxuan98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
